--- a/QRCodeGenerateRead/Views/Home/Index.cshtml
+++ b/QRCodeGenerateRead/Views/Home/Index.cshtml
@@ -2,7 +2,24 @@
     ViewData["Title"] = "Home Page";
 }
 
-<div class="text-center">
-    <h1 class="display-4">Welcome</h1>
-    <p>Learn about <a href="https://docs.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
-</div>
+<br/>
+<form asp-controller="Home" asp-action="Index">
+    <div class="col-lg-12">Enter Qr Code</div>
+    <br />
+    <div class="col-lg-12">
+        <input type="text" name="QRCodeString" id="QrCodeString" class=form-control />
+    </div>
+    <br />
+    <div class="col-lg-12">
+        <input type="submit" value="Generate QR Code" class="btn btn-primary" />
+    </div>
+    <br />
+</form>
+
+@if(!string.IsNullOrEmpty(ViewBag.URL))
+    {
+        <div class="col-lg-12">
+            <img src="@ViewBag.URL">
+        </div>
+    }
+
